--- a/templates/rgb.html
+++ b/templates/rgb.html
@@ -30,7 +30,20 @@
 {% block body %}
 <h1 class="text-center">RGB values within an Image</h1>
 <div class="container">
-  <button onclick="toggle()">GrayScale</button>
+  <style>
+    button {
+      background-color: pink;
+      width: 200px;
+      font-size: 20px;
+      padding: 10px;
+      border-radius: 5px;
+      border-color: hotpink;
+      color: white;
+      cursor: pointer;
+      position: center;
+    }
+  </style>
+  <button onclick="toggle()" style="background-color:pink; border-color:hotpink">GrayScale</button>
   <div class="row justify-content-md-center" id="colored">
     <table class="table">
       <thead>
