--- a/templates/rgb.html
+++ b/templates/rgb.html
@@ -40,7 +40,10 @@
       border-color: hotpink;
       color: white;
       cursor: pointer;
-      position: center;
+      position: absolute;
+      top: 11.5%;
+      right: 0.5%;
+
     }
   </style>
   <button onclick="toggle()" style="background-color:pink; border-color:hotpink">GrayScale</button>
