Shift buttons add

--- a/templates/grid.html
+++ b/templates/grid.html
@@ -127,8 +127,50 @@
             <a href="/rgb">RGB Binary</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
+            <a href="https://docs.google.com/document/d/1MwSAr1UONVUdjOunzYPHmVShoFrSIW4hC8nY-0F4TFI/edit?usp=sharing" target="_blank">Documentation</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+            _________________________________________________________________________________________________________________
+        </div>
+    </div>
+    <div class="row">
+        <style>
+            a:link {
+                color: pink;
+                background-color: transparent;
+                text-decoration: none;
+            }
+
+            a:visited {
+                color: pink;
+                background-color: transparent;
+                text-decoration: none;
+            }
+
+            a:hover {
+                color: deeppink;
+                background-color: transparent;
+                text-decoration: underline;
+            }
+
+            a:active {
+                color: hotpink;
+                background-color: transparent;
+                text-decoration: underline;
+            }
+        </style>
+        <div class="col-sm" style="font-size:30px;">
             <a href=""></a>
         </div>
+        <div class="col-sm" style="font-size:30px;">
+            <a href=""></a>
+        </div>
+        <div class="col-sm" style="font-size:30px;">
+            <a href=""></a>
+        </div>
+
         {% endblock %}
     </div>
 </html>
