--- a/templates/binary.html
+++ b/templates/binary.html
@@ -155,23 +155,28 @@
         <div class="col-8">
             <table class="table">
                 <tr id="table">
+                    <th>Left</th>
                     <th>Plus</th>
                     <th>Binary</th>
                     <th>Octal</th>
                     <th>Hexadecimal</th>
                     <th>Decimal</th>
                     <!-- Hack: display ASCII label for printable character(s)  -->
+                    <th>ASCII</th>
                     <th>Minus</th>
+                    <th>Right</th>
                 </tr>
                 <tr>
+                    <td><button type="button" id="" onclick=""><<</button></td>
                     <td><button type="button" id="add1" onclick="add(1)">+1</button></td>
                     <td id="binary">00000000</td>
                     <td id="octal">0</td>
                     <td id="hexadecimal">0</td>
                     <td id="decimal">0</td>
                     <!-- Hack: display ASCII printable character(s)  -->
-                    <!-- <td id="ascii">0</td> -->
+                    <td id="ascii">0</td>
                     <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
+                    <td><button type="button" id="" onclick="">>></button></td>
 
                 </tr>
             </table>
