--- a/templates/binary.html
+++ b/templates/binary.html
@@ -15,6 +15,9 @@
 
 {% set msgTurnOn = "Turn On" %}
 {% set msgTurnOff = "Turn Off" %}
+{% set imgBulbOn = "/static/img/red-square.png" %}
+{% set imgBulbOff = "/static/img/black-square-16.png" %}
+
 {% block body %}
 {% block meta %}
     <title>Binary page</title>
@@ -93,6 +96,34 @@
             const binary = getBits();
             setConversions(binary);
         }
+
+        function shift(n) {
+            let binary = getBits();
+            // convert to decimal and do math
+            let decimal = parseInt(binary, 2);
+            if (n > 0) {  //SHIFT LEFT
+                decimal = MAX === decimal ? 0 : decimal << n; // OVERFLOW or SHIFT
+            } else {      //SHIFT RIGHT
+                decimal = 0 ? MAX === decimal : decimal >> Math.abs(n);
+            }
+
+            // convert the result back to binary
+            binary = decimal_2_base(decimal, 2);
+            // update conversions
+            setConversions(binary);
+
+            for (let i = 0; i < binary.length; i++) {
+                let digit = binary.substr(i, 1);
+                document.getElementById('digit' + i).value = digit;
+                if (digit === "1") {
+                    document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
+                    document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
+                } else {
+                    document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
+                    document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
+                }
+            }
+        }
         // add is positive integer, subtract is negative integer
         function add(n) {
             let binary = getBits();
@@ -100,7 +131,7 @@
             let decimal = parseInt(binary, 2);
             if (n > 0) {  // PLUS
                 decimal = MAX === decimal ? 0 : decimal += n; // OVERFLOW or PLUS
-            } else  {     // MINUS
+            } else {     // MINUS
                 decimal = 0 === decimal ? MAX : decimal += n; // OVERFLOW or MINUS
             }
             // convert the result back to binary
@@ -131,8 +162,6 @@
             <label for="bits">Enter Bits</label>
             <input name="bits" id="bits">
             <input type="submit" value="Set Bits"><br>
-            <label for="pic">Music Notes</label>
-            <input type="radio" id="pic" name="pic" value="Music Notes">
         </form>
     </div>
 
@@ -144,6 +173,7 @@
             <div class="col-8">
                 <table class="table">
                     <tr id="table">
+                        <th>Multiply</th>
                         <th>Plus</th>
                         <th>Binary</th>
                         <th>Octal</th>
@@ -152,8 +182,10 @@
                         <th>Ascii</th>
                         <!-- Hack: display ASCII label for printable character(s)  -->
                         <th>Minus</th>
+                        <th>Divide</th>
                     </tr>
                     <tr>
+                        <td><button type="button" id="shiftleft" onclick="shift(1)"><<</button></td>
                         <td><button type="button" id="add1" onclick="add(1)">+1</button></td>
                         <td id="binary">00000000</td>
                         <td id="octal">0</td>
@@ -162,6 +194,7 @@
                         <td id="ascii">0</td>
                         <!-- Hack: display ASCII printable character(s)  -->
                         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
+                        <td><button type="button" id="shiftright" onclick="shift(-1)">>></button></td>
 
                     </tr>
                 </table>
@@ -183,6 +216,14 @@
                     </tr>
                 </table>
             </div>
+                <table>
+
+
+
+
+
+
+                </table>
 
         </div>
     </div>
