--- a/templates/binary.html
+++ b/templates/binary.html
@@ -144,6 +144,58 @@
             }
         }
     }
+    function times(n) {
+        let binary = getBits();
+        // convert to decimal and do math
+        let decimal = parseInt(binary, 2);
+        if (n > 1) {  // multiply
+            decimal = MAX === decimal ? 0 : decimal *= n; // OVERFLOW or times
+        } else  {     // divide
+            decimal = 0 === decimal ? MAX : decimal /= n; // OVERFLOW or divide
+        }
+        // convert the result back to binary
+        binary = decimal_2_base(decimal, 2);
+        // update conversions
+        setConversions(binary);
+        // update bits
+        for (let i = 0; i < binary.length; i++) {
+            let digit = binary.substr(i, 1);
+            document.getElementById('digit' + i).value = digit;
+            if (digit === "1") {
+                document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
+                document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
+            } else {
+                document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
+                document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
+            }
+        }
+    }
+    function divide(n) {
+        let binary = getBits();
+        // convert to decimal and do math
+        let decimal = parseInt(binary, 2);
+        if (n > 1) {  // dividing the numbers
+            decimal = MAX === decimal ? 0 : decimal /= n; // OVERFLOW or divide
+        } else  {     // multiplying the numbers
+            decimal = 0 === decimal ? MAX : decimal *= n; // OVERFLOW or times
+        }
+        // convert the result back to binary
+        binary = decimal_2_base(decimal, 2);
+        // update conversions
+        setConversions(binary);
+        // update bits
+        for (let i = 0; i < binary.length; i++) {
+            let digit = binary.substr(i, 1);
+            document.getElementById('digit' + i).value = digit;
+            if (digit === "1") {
+                document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
+                document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
+            } else {
+                document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
+                document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
+            }
+        }
+    }
 </script>
 {% endblock %}
 
@@ -167,7 +219,7 @@
                     <th>Right</th>
                 </tr>
                 <tr>
-                    <td><button type="button" id="" onclick=""><<</button></td>
+                    <td><button type="button" id="multiply2" onclick="times(2)">X2</button></td>
                     <td><button type="button" id="add1" onclick="add(1)">+1</button></td>
                     <td id="binary">00000000</td>
                     <td id="octal">0</td>
@@ -176,7 +228,7 @@
                     <!-- Hack: display ASCII printable character(s)  -->
                     <td id="ascii">0</td>
                     <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
-                    <td><button type="button" id="" onclick="">>></button></td>
+                    <td><button type="button" id="divide2" onclick="divide(2)">÷2</button></td>
 
                 </tr>
             </table>
