work in progress color code

--- a/templates/grid.html
+++ b/templates/grid.html
@@ -39,7 +39,7 @@
             <a href="/greet">Greet</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
-            <a href="/binary">Binary</a>
+            <a href={{ url_for('binary') }}>Binary</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
             <a href="/stub">Video/Journal 0</a>
@@ -162,7 +162,7 @@
             }
         </style>
         <div class="col-sm" style="font-size:30px;">
-            <a href=""></a>
+            <a href="/colorcodes">Color Code</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
             <a href=""></a>
