--- a/templates/binary.html
+++ b/templates/binary.html
@@ -38,6 +38,7 @@ add new images (ie PNGs) to project -->
             }
             return bits;
         }
+
         // setter for DOM values
         function setConversions(binary) {
             document.getElementById('binary').innerHTML = binary;
@@ -54,16 +55,15 @@ add new images (ie PNGs) to project -->
             document.getElementById('ascii').innerHTML = String.fromCharCode(parseInt(binary, 2));
         }
 
-
         // algorithm to convert decimal to base using division and remainder
         function decimal_2_base(decimal, base) {
             let conversion = "";
 // loop to convert to base
             do {
                 let digit = decimal % base;
-                conversion = "" + digit + conversion;
-                decimal = ~~(decimal / base);
-            } while (decimal > 0);
+                conversion = "" + digit + conversion; // what does this do?
+                decimal = ~~(decimal / base); // what does this do? what is ~~?
+            } while (decimal > 0); // why while at the end?
 // loop to pad with zeros
             if (base === 2) { // only pad for binary conversions
                 for (let i = 0; conversion.length < BITS; i++) {
@@ -72,6 +72,7 @@ add new images (ie PNGs) to project -->
             }
             return conversion;
         }
+
 
         // toggle selected bit and recalculate
         function toggleBit(i) {
@@ -89,14 +90,10 @@ add new images (ie PNGs) to project -->
                 image.src = "{{ imgBulbOn }}";
                 butt.innerHTML = "{{ msgTurnOff }}";
             }
+
 // Binary numbers
             const binary = getBits();
             setConversions(binary);
-        }
-
-        function unsignedAddition(n) {
-
-
         }
         // add is positive integer, subtract is negative integer
         function add(n) {
@@ -126,6 +123,10 @@ add new images (ie PNGs) to project -->
             }
         }
     </script>
+
+
+
+
 
     <h1 class="text-center">Binary Math with Conversions</h1>
     <form action="/binary" id="bits" method="POST" >
@@ -177,6 +178,21 @@ add new images (ie PNGs) to project -->
                             <td><label for='digit{{i}}'></label><input type='text' id='digit{{i}}' Value="0" size="2" readonly></td>
                         {% endfor %}
                     </tr>
+
+                    <tr>
+                        <!-- for loop -->
+                        {% for j in range(BITS) %}
+                            <td><img class="img-responsive py-3" id="bulb{{j}}+8" src="{{ imgBulbOff }}" alt="" width="40" height="Auto">
+                                <button type="button" id="butt{{j}}+8" onclick="toggleBit('{{j}}+8')">{{ msgTurnOn }}</button>
+                            </td>
+                        {% endfor %}
+                    </tr>
+                    <tr>
+                        {% for j in range(BITS) %}
+                            <td><label for='digit{{j}}+8'></label><input type='text' id='digit{{j}}+8' Value="0" size="2" readonly></td>
+                        {% endfor %}
+                    <tr>
+
                 </table>
             </div>
 
