--- a/templates/binary.html
+++ b/templates/binary.html
@@ -51,7 +51,11 @@ add new images (ie PNGs) to project -->
             DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asp
             below ASCII for more ideas of where to make changes
             */
-            document.getElementById('ascii').innerHTML = String.fromCharCode(parseInt(binary, 2));
+            {#document.getElementById('ascii').innerHTML = String.fromCharCode(parseInt(binary, 2));#}
+            {#document.getElementById('unicode').innerHTML = parseInt(binary, 2).toString(16);#}
+            ucode = String.fromCharCode(parseInt(binary,2));
+
+            document.getElementById('ascii').innerHTML = ucode;
         }
 
 
@@ -209,7 +213,7 @@ add new images (ie PNGs) to project -->
                         <th>Octal</th>
                         <th>Hexadecimal</th>
                         <th>Decimal</th>
-                        <th>Ascii</th>
+                        <th>Ascii/Unicode</th>
                         <!-- Hack: display ASCII label for printable character(s) -->
                         <th>Minus</th>
                         <th>Shift Right (/2)</th>
@@ -223,7 +227,6 @@ add new images (ie PNGs) to project -->
                         <td id="hexadecimal">0</td>
                         <td id="decimal">0</td>
                         <td id="ascii">0</td>
-
                         <!-- Hack: display ASCII printable character(s) -->
                         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
                         <td ><button type="button" id="div1" onclick = "divide(2)">>><//2</button></td>
