--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,6 +14,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('about') }}>About</a>
             <a class="nav-link" href={{ url_for('insights') }}>Insights</a>
             <a class="nav-link" href="/stub">Stub</a>
+            <a class="nav-link" href={{ url_for('color') }}>Color</a>
 
 
             <html>
