--- a/templates/binary.html
+++ b/templates/binary.html
@@ -61,8 +61,8 @@
          DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asp
          below ASCII for more ideas of where to make changes
          */
-        //let text= String.fromCharCode(parseInt(parseInt(binary, 2).toString(10)));
-        //document.getElementbyId('ascii').innerHTML= text;    //set ascii to table
+        let text= String.fromCharCode(parseInt(parseInt(binary, 2).toString(10))); //returns
+        document.getElementById('ascii').innerHTML= text;    //set ascii to table
     }
 
     /* This function converts decimal number to selected base using decimal, base, quotient, remainder.
