--- a/templates/colorcodes.html
+++ b/templates/colorcodes.html
@@ -8,57 +8,167 @@
 </head>
 {% block body %}
 <div class="col-8">
-    <table class="table">
-        <th>
-            R Value
-        </th>
-        <tr>
-            <td>
-                <button type="button" id="" onclick="">0</button>
-                <button type="button" id="" onclick="">0</button>
-                <button type="button" id="" onclick="">0</button>
-                <button type="button" id="" onclick="">0</button>
-                <button type="button" id="" onclick="">0</button>
-                <button type="button" id="" onclick="">0</button>
-                <button type="button" id="" onclick="">0</button>
-                <button type="button" id="" onclick="">0</button>
-            </td>
-        </tr>
-        <table class="table">
-            <th>
-                G Value
-            </th>
-            <tr>
-                <td>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                </td>
-            </tr>
-        </table>
-        <table class="table">
-            <th>
-                B Value
-            </th>
-            <tr>
-                <td>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                    <button type="button" id="" onclick="">0</button>
-                </td>
-            </tr>
-        </table>
+    <style>
+        *{
+            margin:auto;
+        }
+        button {
+            background-color:pink;
+            color:white;
+            border-color: hotpink;
+            width: 2%;
+        }
+    </style>
+    <div class="row">
+        <div class="col-sm-1"></div> <!-- This is to create the buttons -->
 
+        <button class="col-sm-1" id="r1" onclick="toggleSwitch('r1')">0</button>
+
+        <button class="col-sm-1" id="r2" onclick="toggleSwitch('r2')">0</button>
+
+        <button class="col-sm-1" id="r3" onclick="toggleSwitch('r3')">0</button>
+
+        <button class="col-sm-1" id="r4" onclick="toggleSwitch('r4')">0</button>
+
+        <button class="col-sm-1" id="r5" onclick="toggleSwitch('r5')">0</button>
+
+        <button class="col-sm-1" id="r6" onclick="toggleSwitch('r6')">0</button>
+
+        <button class="col-sm-1" id="r7" onclick="toggleSwitch('r7')">0</button>
+
+        <button class="col-sm-1" id="r8" onclick="toggleSwitch('r8')">0</button>
+
+
+        <div class="offset-sm-1 col-sm-2">
+            <p id="r">Decimal value: 0</p>
+        </div>
+    </div>
+
+    <br />
+
+    <div class="row">
+        <div class="col-sm-1"></div>
+
+        <button class="col-sm-1" id="g1" onclick="toggleSwitch('g1')">0</button>
+
+        <button class="col-sm-1" id="g2" onclick="toggleSwitch('g2')">0</button>
+
+        <button class="col-sm-1" id="g3" onclick="toggleSwitch('g3')">0</button>
+
+        <button class="col-sm-1" id="g4" onclick="toggleSwitch('g4')">0</button>
+
+        <button class="col-sm-1" id="g5" onclick="toggleSwitch('g5')">0</button>
+
+        <button class="col-sm-1" id="g6" onclick="toggleSwitch('g6')">0</button>
+
+        <button class="col-sm-1" id="g7" onclick="toggleSwitch('g7')">0</button>
+
+        <button class="col-sm-1" id="g8" onclick="toggleSwitch('g8')">0</button>
+
+
+        <div class="offset-sm-1 col-sm-2">
+            <p id="g">Decimal value: 0</p>
+        </div>
+    </div>
+
+    <br />
+
+    <div class="row">
+        <div class="col-sm-1"></div>
+
+        <button class="col-sm-1" id="b1" onclick="toggleSwitch('b1')">0</button>
+
+        <button class="col-sm-1" id="b2" onclick="toggleSwitch('b2')">0</button>
+
+        <button class="col-sm-1" id="b3" onclick="toggleSwitch('b3')">0</button>
+
+        <button class="col-sm-1" id="b4" onclick="toggleSwitch('b4')">0</button>
+
+        <button class="col-sm-1" id="b5" onclick="toggleSwitch('b5')">0</button>
+
+        <button class="col-sm-1" id="b6" onclick="toggleSwitch('b6')">0</button>
+
+        <button class="col-sm-1" id="b7" onclick="toggleSwitch('b7')">0</button>
+
+        <button class="col-sm-1" id="b8" onclick="toggleSwitch('b8')">0</button>
+
+
+        <div class="offset-sm-1 col-sm-2">
+            <p id="b">Decimal value: 0</p>
+        </div>
+    </div>
+
+    <br />
+
+    <div class="offset-sm-1 col-sm-10" id="color" style="background-color: #000000; height: 20vh;">  <!-- Div that shows off color -->
+    </div>
+    <p style="text-align: center; color: white" id="code">#000000</p>
+
+    <br />
+
+    <script>
+
+        var red = 0;
+        var green = 0;
+        var blue = 0;
+
+        function toggleSwitch (id) {     // toggles button between on and off
+            const element = document.getElementById(id);
+            if (element.innerHTML == "1") {
+                element.innerHTML = "0";
+            } else {
+                element.innerHTML = "1";
+            }
+            element.classList.toggle("buttonOn");
+            element.classList.toggle("buttonOff");
+
+            calculateRow(id.charAt(0));
+        }
+
+        function calculateRow (color) {    // function that calculates the decimal value for a certain row after one of its buttons is toggled
+            let sum = 0;
+            for (var i = 1; i <= 8; i++) {
+                let element = document.getElementById(color + i);
+                sum += Math.pow(2, 8 - i) * parseInt(element.innerHTML);
+            }
+            document.getElementById(color).innerHTML = "Decimal value: " + sum;
+            switch (color) {
+                case 'r':
+                    red = sum;
+                    break;
+                case 'g':
+                    green = sum;
+                    break;
+                case 'b':
+                    blue = sum;
+                    break;
+                default:
+                    break;
+            }
+            setColorCode();
+        }
+
+        function setColorCode () {    // creates color from values
+            let r = red.toString(16);
+            let g = green.toString(16);
+            let b = blue.toString(16);
+
+            if (r.length == 1) {
+                r = "0" + r;
+            }
+            if (g.length == 1) {
+                g = "0" + g;
+            }
+            if (b.length == 1) {
+                b = "0" + b;
+            }
+
+            let code = "#" + r + g + b;
+            document.getElementById("color").style.backgroundColor = code;
+            document.getElementById("code").innerHTML = "Hexcode: " + code;
+        }
+    </script>
 </div>
+</body>
 {% endblock %}
 </html>
