Finished Color Code

--- a/templates/colorcodes.html
+++ b/templates/colorcodes.html
@@ -7,9 +7,10 @@
     <title>Color Codes</title>
 </head>
 {% block body %}
+<h1 style="text-align: center">Color Code</h1>
 <div class="col-8">
     <style>
-        *{
+        div{
             margin:auto;
         }
         button {
