--- a/templates/colorcodes.html
+++ b/templates/colorcodes.html
@@ -17,7 +17,7 @@
             background-color:pink;
             color:white;
             border-color: hotpink;
-            width: 2%;
+            height: 5%;
         }
     </style>
     <div class="row">
@@ -40,8 +40,8 @@
         <button class="col-sm-1" id="r8" onclick="toggleSwitch('r8')">0</button>
 
 
-        <div class="offset-sm-1 col-sm-2">
-            <p id="r">Decimal value: 0</p>
+        <div class="col-sm-3">
+            <p id="r">Decimal Value: 0</p>
         </div>
     </div>
 
@@ -67,8 +67,8 @@
         <button class="col-sm-1" id="g8" onclick="toggleSwitch('g8')">0</button>
 
 
-        <div class="offset-sm-1 col-sm-2">
-            <p id="g">Decimal value: 0</p>
+        <div class="col-sm-3">
+            <p id="g">Decimal Value: 0</p>
         </div>
     </div>
 
@@ -94,14 +94,14 @@
         <button class="col-sm-1" id="b8" onclick="toggleSwitch('b8')">0</button>
 
 
-        <div class="offset-sm-1 col-sm-2">
-            <p id="b">Decimal value: 0</p>
+        <div class="col-sm-3">
+            <p id="b">Decimal Value: 0</p>
         </div>
     </div>
 
     <br />
 
-    <div class="offset-sm-1 col-sm-10" id="color" style="background-color: #000000; height: 20vh;">  <!-- Div that shows off color -->
+    <div class="col-sm-10" id="color" style="background-color: #000000; height: 20vh;">  <!-- shows color -->
     </div>
     <p style="text-align: center; color: white" id="code">#000000</p>
 
@@ -132,7 +132,7 @@
                 let element = document.getElementById(color + i);
                 sum += Math.pow(2, 8 - i) * parseInt(element.innerHTML);
             }
-            document.getElementById(color).innerHTML = "Decimal value: " + sum;
+            document.getElementById(color).innerHTML = "Decimal Value: " + sum + "";
             switch (color) {
                 case 'r':
                     red = sum;
