--- a/templates/grid.html
+++ b/templates/grid.html
@@ -165,7 +165,7 @@
             <a href="/colorcodes">Color Code</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
-            <a href=""></a>
+            <a href="/logicgates">Logic Gates</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
             <a href=""></a>
@@ -173,4 +173,5 @@
 
         {% endblock %}
     </div>
+
 </html>
