Logic gates organizing

--- a/templates/logicgates.html
+++ b/templates/logicgates.html
@@ -32,12 +32,10 @@
         width: 15px;
         height: 15px;
     }
-    table {
+    .banana {
         width: 50%;
         text-align: center;
-        margin-left: auto;
-        margin-right:auto;
-        padding: 2px
+        margin:auto;
     }
 </style>
 <script>
@@ -82,6 +80,20 @@
     }
 </script>
 <div style="text-align: center">
+    <style>
+        div{
+            margin:auto;
+        }
+        table{
+            margin:auto;
+        }
+        tr{
+            margin:auto;
+        }
+        th{
+            margin:auto;
+        }
+    </style>
     <br>
     <h1>Logic Gates</h1>
     <input type="checkbox" id="A" name="optionA" value="A" onclick="logic(this)">
@@ -103,52 +115,54 @@
             <th>RESULT</th>
         </tr>
         <tr id="AND">
-            <td><img src="/static/unnamed.png"></td>
+            <td><img class="banana" src="/static/unnamed.png"></td>
             <td><p>AND</p></td>
             <td id="AND-result">0</td>
         </tr>
 
         <tr id="NAND">
-            <td><img src="/static/download-1.png"></td>
+            <td><img class="banana" src="/static/download-1.png"></td>
             <td><p>NAND</p></td>
             <td id="NAND-result">1</td>
         </tr>
 
         <tr id="OR">
-            <td><img src="/static/logic-gate-or-us.png"></td>
+            <td><img class="banana" src="/static/logic-gate-or-us.png"></td>
             <td><p>OR</p></td>
             <td id="OR-result">0</td>
         </tr>
 
         <tr id="NOR">
-            <td><img src="/static/Logic-gate-nor-us.png"></td>
+            <td><img class="banana" src="/static/Logic-gate-nor-us.png"></td>
             <td><p>NOR</p></td>
             <td id="NOR-result">1</td>
         </tr>
 
         <tr id="XOR">
-            <td><img src="/static/download.png"></td>
+            <td><img class="banana" src="/static/download.png"></td>
             <td><p>XOR</p></td>
             <td id="XOR-result">0</td>
         </tr>
 
         <tr id="XNOR">
-            <td><img src="/static/Logic-gate-xnor-us.png"></td>
+            <td><img class="banana" src="/static/Logic-gate-xnor-us.png"></td>
             <td><p>XNOR</p></td>
             <td id="XNOR-result">0</td>
         </tr>
 
         <tr id="ABUFFER">
-            <td><img src="/static/download%20(7).png"></td>
+            <td><img class="banana" src="/static/download%20(7).png"></td>
             <td><p>A BUFFER</p></td>
             <td id="ABUFFER-result">0</td>
         </tr>
 
         <tr id="ANOT">
-            <td><img src="/static/download%20(8).png"></td>
+            <td><img class="banana" src="/static/download%20(8).png"></td>
             <td><p>A NOT</p></td>
             <td id="ANOT-result">1</td>
         </tr>
     </table>
 </div>
+<br>
+<br>
 {% endblock %}
