Change For loops

--- a/templates/binary.html
+++ b/templates/binary.html
@@ -45,14 +45,14 @@
     }
     function getBits2() {
         let bits = "";
-        for(let i = 0; i < BITS; i++) {
+        for(let i = 0; i < 2*BITS; i++) {
             bits = bits + document.getElementById('digit2' + i).value;
         }
         return bits;
     }
     function getBits3() {
         let bits = "";
-        for(let i = 0; i < BITS; i++) {
+        for(let i = 0; i < 3*BITS; i++) {
             bits = bits + document.getElementById('digit3' + i).value;
         }
         return bits;
